<resources>
    <string name="app_name">CrudBiblioteca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autor">Autor</string>
    <string name="titulo">Titulo</string>
    <string name="isbn">Isbn</string>

    <string name="genero">genero</string>

    <string name="n_mero_de_ejemplares_disponiibles">Número de ejemplares disponiibles</string>

    <string name="n_mero_de_ejemplares_ocupados">Número de ejemplares ocupados</string>
    <string name="descripcion">describe</string>
    <string name="mensaje">Ingrese los datos requeridos.</string>
    <string name="guardar">Guardar</string>
    <string name="editar">editar</string>


    <!--- STRING DE USUARIOS -->
    <string name="nombre">Nombre:</string>
    <string name="direccion">Dirección: </string>
    <string name="correo">Correo: </string>
    <string name="telefono">Télefono:</string>
    <string name="descripcion_casa">Descripción casa:</string>
    <string name="tipo_usuarios"> Tipo de usuario::</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


    <string-array name="tipos_usuario">
        <item>Lector</item>
        <item>Bibliotecario</item>
        <item>Administrador</item>
    </string-array>
</resources>