<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guardarLibroFragment" >

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbllibro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblautor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor" />

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblisbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn" />

        <EditText
            android:id="@+id/txtIsbn"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero" />

        <EditText
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblEjemplares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_ejemplares_disponiibles" />

        <EditText
            android:id="@+id/txtejemplares"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblejemplaresocupados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_ejemplares_ocupados" />

        <EditText
            android:id="@+id/txtejemplaresocupados"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblDescripion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="descripcion" />

        <EditText
            android:id="@+id/txtdescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="edit"
                android:text="@string/editar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>