<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guardarLibroFragment" >

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/lbllibros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo" />

                <EditText
                    android:id="@+id/txtTitulos"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:ems="10"
                    android:hint="@string/mensaje"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lblautores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autor" />

                <EditText
                    android:id="@+id/txtAutors"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:ems="10"
                    android:hint="@string/mensaje"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lblisbns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isbn" />

                <EditText
                    android:id="@+id/txtIsbns"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:ems="10"
                    android:hint="@string/mensaje"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lblGeneros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genero" />

                <EditText
                    android:id="@+id/txtGeneros"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:ems="10"
                    android:hint="@string/mensaje"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lblEjemplaress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_mero_de_ejemplares_disponiibles" />

                <EditText
                    android:id="@+id/txtejemplaress"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:ems="10"
                    android:hint="@string/mensaje"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lblejemplaresocupadoss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_mero_de_ejemplares_ocupados" />

                <EditText
                    android:id="@+id/txtejemplaresocupadoss"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:ems="10"
                    android:hint="@string/mensaje"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lblDescripiones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="descripcion" />

                <EditText
                    android:id="@+id/txtdescripciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/descripcion"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                        <Button
                            android:id="@+id/btnGuardar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/editar" />

                        <Button
                            android:id="@+id/btnEditar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:text="Eliminar" />
                </LinearLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>